rutas de imagenes apuntando a AWS S3

--- a/src/client/style/app.styl
+++ b/src/client/style/app.styl
@@ -667,7 +667,7 @@ body
 	background: linear-gradient(135deg,  rgba(0,174,181,1) 6%,rgba(0,151,211,1) 100%)
 
 	.banner1
-		background-image url("img/Binndi_Fold1.jpg")
+		background-image url("https://s3-sa-east-1.amazonaws.com/binndi/landing/Binndi_Fold1.jpg")
 		background-repeat no-repeat
 		background-size cover
 		background-position 68% 50px
@@ -1014,6 +1014,7 @@ body
 			display block
 			margin 0px
 			padding 0px
+			width 100%
 			
 			img
 				width 100%
@@ -1559,7 +1560,7 @@ body
 			background-color white
 			height 100%
 		.img-cell
-			width 27%
+			width 22%
 			
 
 	.section-binndi-points
@@ -1628,6 +1629,9 @@ body
 					
 				h2
 					font-size 1em
+			figure
+				width 1257px
+				
 		.grid-b
 			flex-direction row
 			flex-wrap wrap
@@ -1732,7 +1736,7 @@ body
 		display flex
 		padding 7px 0px
 		.background-footer
-			background-image url("img/logoFooter.png")
+			background-image url("https://s3-sa-east-1.amazonaws.com/binndi/landing/logoFooter.png")
 			background-position -89px
 			background-repeat no-repeat
 			background-size cover
