--- a/src/client/style/forms.styl
+++ b/src/client/style/forms.styl
@@ -139,6 +139,16 @@
 			margin 25px auto
 			width 100px
 			
+.popup-message .wrapper-popup-login .popup-login-wrapper-content
+	height 62%
+	figure
+		display block
+		width 160px
+		margin 0px auto 30px auto
+		img
+			width 100%
+	
+			
 
 @media screen and (min-width: 767px)
 	.popup-add-to-plan
