--- a/src/client/style/userprofile.styl
+++ b/src/client/style/userprofile.styl
@@ -36,7 +36,7 @@
 			height 200px
 			z-index 5
 			display block
-			background url("img/Portada-Perfil.jpg")
+			background url("https://s3-sa-east-1.amazonaws.com/binndi/landing/Portada-Perfil.jpg")
 			background-size cover
 			background-repeat no-repeat
 			
