prubea de correción en las rutas  -> main.js

--- a/src/client/style/app.styl
+++ b/src/client/style/app.styl
@@ -533,6 +533,9 @@ body
 						justify-content flex-end
 						li
 							margin auto 7px
+							div
+								cursor pointer
+							
 							span, p
 								display inline-block
 								
