--- a/src/client/style/app.styl
+++ b/src/client/style/app.styl
@@ -677,7 +677,7 @@ body
 		background-image url("https://s3-sa-east-1.amazonaws.com/binndi/landing/Binndi_Fold1.jpg")
 		background-repeat no-repeat
 		background-size cover
-		background-position 68% 50px
+		background-position 68% 100px
 		height 632px
 		width 100%
 		
@@ -868,10 +868,14 @@ body
 			display flex
 			flex-direction column
 			div
-				h3, h4
-					width 95%
 				h3
 					margin 0px auto
+					width 95%
+				
+				h4
+					margin 5px auto
+					width 95%
+					font-weight lighter
 			figure
 				display block
 				margin 0px
@@ -884,8 +888,8 @@ body
 		.banner-binndi-points
 			.wrapper-text-banner-secundary-binndi-points
 				width 100%
-				height 300px
-				margin 50px 0px 0px 0px
+				height 310px
+				margin 10px 0px 0px 0px
 				
 				.ico-secundary-banners
 					color #02AC36
@@ -894,9 +898,12 @@ body
 				
 				.btn-big-curve
 					background-color #02AC36
-					width 125px
+					width 155px
 					margin 30px auto
-					padding 10px 17px
+					padding 12px 19px
+					
+					p
+						font-size 1em
 	
 		
 		.banner-binndi-enterprise
@@ -910,9 +917,12 @@ body
 				
 				.btn-big-curve
 					background-color #0097D2
-					width 125px
+					width 155px
 					margin 30px auto 30px auto
-					padding 10px 17px
+					padding 12px 19px
+					
+					p
+						font-size 1em
 					
 		.banner-binndi-app
 			.wrapper-text-banner-secundary-app
@@ -964,6 +974,7 @@ body
 			margin 0px auto 0px auto
 			padding 0px 0px 0px 15px
 			width 280px
+			
 	.grid-b
 		margin 0px
 		padding 0px
@@ -1407,7 +1418,10 @@ body
 		
 	.subtitle
 		width 67%
-		
+	
+	.banner-background .banner1
+		background-position 66% 32px
+
 	.banner-background .wrapper-slider .slide .wrapper-banner-content .wrapper-text-features-banners h1, .banner-background .wrapper-slider .slide .wrapper-banner-content .wrapper-text-features-banners h2
 		width 47%
 
@@ -1455,6 +1469,11 @@ body
 				margin-bottom 40px
 			
 @media screen and (min-width: 1020px)
+
+	.btn-big-curve
+		width 135px
+		padding 11px 18px
+		
 	body .appContainer .container .header .nav .nav-left 
 		.ico-menu-movil
 			display none
@@ -1464,13 +1483,22 @@ body
 		.first-btn-nav
 			margin-left 40px
 			
-	.banner-background .banner1 .wrapper-text-banners-first
-		h1
-			width 462px
-			font-size 1.9em
-			
-		h2
-			font-size 1.4em
+	.banner-background .banner1 
+		background-position 68% 0px
+		
+		.wrapper-text-banners-first
+			h1
+				width 462px
+				font-size 2em
+				
+			h2
+				font-size 1.5em
+				margin 0px auto
+				width 29%
+			.wrapper-btn-cta
+				margin 21px auto
+				.btn-big-curve
+					width 120px
 			
 	.banner-background .banner-binndi-tech 
 		height 245px
@@ -1483,6 +1511,14 @@ body
 				width 1000px
 				.landing-thumbnail
 					width 320px
+			figure
+				width 235px
+			h3
+				font-family "montserrat"
+				font-size 1.7em
+			h4
+				font-size 1.2em
+				margin 5px auto 0px auto
 
 	.banner-background 
 		.nav-sub-banner
@@ -1495,23 +1531,26 @@ body
 				.ico-arrow-subnav-banners
 					font-size 1.2em
 		
-		.wrapper-slider 
+		.wrapper-slider
+			height 630px
 
 			#banner-sequence-1 .wrapper-banner-content
 				margin-top 130px
-				width 803px
+				width 840px
 			#banner-sequence-2 .wrapper-banner-content
 				margin-top 100px
 				width 760px
 			#banner-sequence-3 .wrapper-banner-content
-				margin-top 100px
-				width 860px
+				margin-top 110px
+				width 880px
 				
 			.slide
+				height 630px
 				
 				.wrapper-banner-content
 					
-					margin 0px auto
+					margin 120px auto
+					padding-right 100px
 					.wrapper-text-features-banners, .banner-image
 						display block
 					
@@ -1524,12 +1563,13 @@ body
 							padding 0px
 							magin 0px
 							text-align left
-							width 379px
+							width 375px
 							
 						h1
 							font-size 1.8em
+							font-family "montserrat"
 						h2
-							font-size 1.1em
+							font-size 1.2em
 							font-weight lighter
 							
 						.btn-big-curve
@@ -1537,16 +1577,24 @@ body
 					
 
 					.img-banner-features-1
-						width 374px
+						width 430px
 					.img-banner-features-2
-						width 310px
+						width 340px
 					.img-banner-features-3
-						width 465px
+						width 475px
 					
 					.banner-image
 						margin 0px
 
-					
+			#banner-sequence-1 .wrapper-banner-content	.wrapper-text-features-banners 
+				h2
+					width 338px
+					margin 10px 0px 0px 0px
+				
+			#banner-sequence-3 .wrapper-banner-content	.wrapper-text-features-banners 
+				h2, h1
+					width 378px
+			
 	.banner-background .otros .banner-binndi-points, .banner-background .otros .banner-binndi-app
 		flex-direction row
 	.banner-background .otros .banner-binndi-enterprise
@@ -1586,22 +1634,27 @@ body
 			.wrapper-header-info
 				display flex
 				justify-content flex-end
-				width 470px
+				width 529px
 				margin 80px auto 0px auto
 				h3
 					font-size 1.7em
-					width 405px
+					width 460px
 					text-align left
 					margin 0px
 					
 				.ico
 					margin 7px 20px 0px 0px
+					height 40px
+					width 40px
+					line-height 40px
+					font-size 1.5em
 			ol 
 				width 395px
-				margin-top 35px
-				padding-left 75px
+				margin-top 30px
+				padding-left 34px
 				li
-					font-size 0.9em
+					font-size 1em
+					margin-bottom 2px
 					
 		.grid-b .section-binndi-points-popup-login
 			width 355px
@@ -1632,6 +1685,7 @@ body
 					float left
 					margin-left 60px
 					margin-top 20px
+					padding 2px 14px
 					
 				h1
 					font-size 1.7em
@@ -1658,7 +1712,7 @@ body
 						margin 80px auto 0px auto
 						
 						h1
-							font-size 1.7em
+							font-size 1.6em
 							width 465px
 							text-align left
 							margin 0px
@@ -1679,6 +1733,7 @@ body
 					a
 						float left
 						margin-left 175px
+						padding 2px 14px
 						margin-top 15px
 						
 			.subgrid-b
