--- a/src/client/style/app.styl
+++ b/src/client/style/app.styl
@@ -426,24 +426,17 @@ textarea {
 .btn-hidden
 	display none
 body
-	display block
-	height 100%
+	width 100%
 	background-color white
 	border none
 	margin 0px
 	padding 0px
-	position relative
-	top 0
 	
 	.appContainer
-		height 100%
 		.container
 			width auto
-			height 100%
 			margin 0px
 			padding 0px
-			position relative
-			z-index 10
 			overflow hidden
 			
 			.header
@@ -667,18 +660,15 @@ body
 	height auto
 	margin 0px
 	padding 0px
-	background: rgb(162,196,152);
-	background: -moz-linear-gradient(-45deg,  rgba(162,196,152,1) 0%, rgba(0,151,211,1) 100%);
-	background: -webkit-linear-gradient(-45deg,  rgba(162,196,152,1) 0%,rgba(0,151,211,1) 100%);
-	background: linear-gradient(135deg,  rgba(162,196,152,1) 0%,rgba(0,151,211,1) 100%);
+	
 
 
 	.banner1
 		background-image url("https://s3-sa-east-1.amazonaws.com/binndi/landing/Binndi_Fold1.jpg")
 		background-repeat no-repeat
 		background-size cover
-		background-position 68% 100px
-		height 632px
+		background-position 64% 40px
+		height 100vh
 		width 100%
 		
 		.wrapper-text-banners
@@ -687,14 +677,18 @@ body
 			height auto
 			
 			h1
+				font-family "Montserrat"
 				margin 0px auto
+				font-size 1.4em
+				line-height 1.3em
+				font-weight normal
 	
 		.wrapper-text-banners-first
 			display block
 			position relative
-			top 160px
+			top 111px
 			h2
-				width 95%
+				width 250px
 				
 			.wrapper-btn-cta
 				display flex
@@ -797,6 +791,10 @@ body
 		top 0px
 		width 100%
 		height 600px
+		background: rgb(162,196,152);
+		background: -moz-linear-gradient(-45deg,  rgba(162,196,152,1) 0%, rgba(0,151,211,1) 100%);
+		background: -webkit-linear-gradient(-45deg,  rgba(162,196,152,1) 0%,rgba(0,151,211,1) 100%);
+		background: linear-gradient(135deg,  rgba(162,196,152,1) 0%,rgba(0,151,211,1) 100%);
 		
 		.banner-sequence .wrapper-banner-content wrapper-text-features-banners
 			display block
@@ -807,7 +805,7 @@ body
 			width 100%
 			display none
 			height 600px
-			
+					
 			.wrapper-banner-content
 				overflow hidden
 	
@@ -889,7 +887,7 @@ body
 			.wrapper-text-banner-secundary-binndi-points
 				width 100%
 				height 310px
-				margin 10px 0px 0px 0px
+				margin 10px 0px 10px 0px
 				
 				.ico-secundary-banners
 					color #02AC36
@@ -910,7 +908,7 @@ body
 			.wrapper-text-banner-secundary-enterprise
 				width 100%
 				height 320px
-				margin 20px 0px 0px 0px
+				margin 20px 0px 10px 0px
 				
 				.ico-secundary-banners
 					color #0097D2
@@ -1323,17 +1321,15 @@ body
 		margin 0px auto 0px auto
 		padding 0px
 		width 90%
-		height 100%
+		height auto
 		list-style none
 		display flex
 		justify-content flex-start
-		align-content center
+		align-items flex-start
 		flex-wrap wrap
 		
 		li
-			display flex
-			flex-direction column
-			justify-content center
+			
 			text-align left
 			width 25%
 			margin-top 25px
@@ -1348,27 +1344,21 @@ body
 				
 			.footer-btn-underline
 				width 30px
-				height 7px
+				height 5px
 				margin 11px 0px
 				background-color #41BCB7
-				float left
 			ul
 				margin 0px
 				padding 0px
 				width 100%
-				height 100%
 				list-style none
-				display flex
-				justify-content flex-start
-				align-content flex-start
-				flex-direction column
 				
 				li
 					width 100%
-					height 9px
 					margin 4px 0px
 					
 					a
+						display block
 						text-decoration none
 						margin 0px
 						padding 0px
@@ -1487,6 +1477,7 @@ body
 		background-position 68% 0px
 		
 		.wrapper-text-banners-first
+			top 140px
 			h1
 				width 462px
 				font-size 2em
