correciones en diseño del landing (resolucion mayor a 1260px

--- a/src/client/style/app.styl
+++ b/src/client/style/app.styl
@@ -934,13 +934,15 @@ body
 					padding 15px 17px
 					p
 						font-size 1.2em
-			.img-cell
-				width 70%
-				margin 0px auto
 				
 			.img-appstore-logos
 				width 200px
 				margin 0px auto
+
+			.wrapper-img-banner-binndi-app
+				.img-cell
+					width 70%
+					margin 0px auto
 
 .section-binndi-points
 	display flex
@@ -1246,8 +1248,8 @@ body
 	list-style none
 	margin 0px 
 	padding 0px
-	position absolute
-	top 970px
+	position relative
+	top 336px
 	right 5px
 	li
 		margin 15px auto
@@ -1421,7 +1423,7 @@ body
 	
 	.banner-background
 		.nav-sub-banner
-			top 1333px
+			top 33%
 			right 45px
 		.banner-secundary
 			padding-bottom 20px
@@ -1479,7 +1481,7 @@ body
 		.wrapper-text-banners-first
 			top 140px
 			h1
-				width 462px
+				width 482px
 				font-size 2em
 				
 			h2
@@ -1513,7 +1515,7 @@ body
 
 	.banner-background 
 		.nav-sub-banner
-			top 820px
+			top 34%
 			li
 				margin 20px auto
 				.ico-subnav-banners
@@ -1595,21 +1597,24 @@ body
 		display block 
 		
 	.banner-background .otros .banner-binndi-points .wrapper-text-banner-secundary-binndi-points
-		margin-top 29px
+		margin auto
 			
 	.banner-background .otros .banner-binndi-enterprise .wrapper-text-banner-secundary-enterprise
-		margin-top 34px
+		margin auto
 		
 	.banner-background .otros .banner-binndi-points div h3, .banner-background .otros .banner-binndi-enterprise div h3, .banner-background .otros .banner-binndi-app div h3, .banner-background .otros .banner-binndi-points div h4, .banner-background .otros .banner-binndi-enterprise div h4, .banner-background .otros .banner-binndi-app div h4
 		width 323px
 	.banner-background .otros .banner-binndi-app 
-		background-color #e0e0e0
+		background-color white
 		.wrapper-text-banner-secundary-app
 			width 50%
 			background-color white
 			height 100%
-		.img-cell
-			width 22%
+		.wrapper-img-banner-binndi-app
+			background-color #e0e0e0
+			width 50%
+			.img-cell
+				width 300px
 			
 
 	.section-binndi-points
