correcciones en diseño landing (tipos en sliders v movil)

--- a/src/client/style/app.styl
+++ b/src/client/style/app.styl
@@ -815,6 +815,13 @@ body
 				position relative
 				top 0px
 				margin 80px auto 40px auto
+				h1
+					font-family "Montserrat"
+					font-size 1.5em
+					line-height 1.3em
+					font-weight normal
+					margin 0px
+					padding 0px 
 				h1, h2
 					text-align center
 					margin 0px auto
@@ -1413,6 +1420,15 @@ body
 	
 	.banner-background .banner1
 		background-position 66% 32px
+		.wrapper-text-banners-first
+			top 211px
+		.wrapper-text-banners
+			width 470px
+			h1
+				font-size 1.8em
+			h2
+				font-size 1.5em
+				width 281px
 
 	.banner-background .wrapper-slider .slide .wrapper-banner-content .wrapper-text-features-banners h1, .banner-background .wrapper-slider .slide .wrapper-banner-content .wrapper-text-features-banners h2
 		width 47%
@@ -1447,6 +1463,9 @@ body
 	.section-binndi-enterprise .grid-b .subgrid-a .wrapper-text-form h2
 		width 65%
 		
+	.banner-background .otros .banner-binndi-app .wrapper-img-banner-binndi-app .img-cell
+		width 30%
+		
 	.footer ul
 		width 70%
 		
@@ -1459,6 +1478,7 @@ body
 			width 380px
 			.btn-close
 				margin-bottom 40px
+	
 			
 @media screen and (min-width: 1020px)
 
@@ -1477,17 +1497,18 @@ body
 			
 	.banner-background .banner1 
 		background-position 68% 0px
-		
+		.wrapper-text-banners
+			width 525px
 		.wrapper-text-banners-first
 			top 140px
 			h1
-				width 482px
+				width 525px
 				font-size 2em
 				
 			h2
 				font-size 1.5em
 				margin 0px auto
-				width 29%
+				width 290px
 			.wrapper-btn-cta
 				margin 21px auto
 				.btn-big-curve
