correccion de diseño en landing, tipo en movil

--- a/src/client/style/app.styl
+++ b/src/client/style/app.styl
@@ -727,6 +727,8 @@ body
 					
 			h3
 				margin 0px auto
+				font-family "Montserrat"
+				font-size 1.5em
 			h4
 				width 85%
 			.landing-wrapper-thumbnails
@@ -957,7 +959,7 @@ body
 	margin 50px 0px 0px 0px
 	padding 0px
 	.grid-a 
-		height 260px
+		height 320px
 		.wrapper-header-info 
 			.ico
 				display block
