actualizacion en form para obtener correos, cta y botones de login en landing

--- a/src/client/style/app.styl
+++ b/src/client/style/app.styl
@@ -1411,6 +1411,37 @@ body
 	font-size 1em
 	padding 5px
 	
+.formUserEmail
+	.input-box
+		margin 20px auto 15px auto
+		width 230px
+		border-radius 20px
+		overflow hidden
+		background-color white
+		display flex
+		height 30px
+		border solid 1px rgb(245, 245, 245)
+
+		input
+			width 177px
+			height 19px
+			margin auto 5px auto 17px
+			border none
+			font-size 0.8em
+			font-family "Oxygen"
+			
+		.btn-ico
+			border-radius 50%
+			background-color #00aeb5
+			height 30px
+			width 27px
+			padding-left 3px
+			display block
+			color white
+			line-height 27px
+			text-align center
+			font-size 1.3em
+			cursor pointer
 
 @media screen and (min-width: 767px)
 	.headlines
@@ -1681,6 +1712,7 @@ body
 			.popup-login-wrapper-content 
 				h4
 					font-size 1.2em
+					width 76%
 				.btn-login
 					margin 25px auto
 				
